force-app/main/default/objects/Unsealed_Item__c/Unsealed_Item__c.object-meta.xml
<CustomObject>
    <label>Unsealed Item</label>
    <nameField>
        <displayFormat>UI-{0000}</displayFormat>
        <label>Unsealed Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unsealed Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>