force-app/main/default/objects/Unsealed_Item__c/fields/Batch_Number__c.field-meta.xml
<CustomField>
    <fullName>Batch_Number__c</fullName>
    <formula>Stock__r.Batch_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Batch Number</label>
    <type>Text</type>
</CustomField>