force-app/main/default/objects/Unsealed_Item__c/fields/Item_code__c.field-meta.xml
<CustomField>
    <fullName>Item_code__c</fullName>
    <formula>Product__r.Product_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item code</label>
    <type>Text</type>
</CustomField>