force-app/main/default/objects/Unsealed_Item__c/fields/Stock__c.field-meta.xml
<CustomField>
    <fullName>Stock__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stock</label>
    <referenceTo>Stock__c</referenceTo>
    <relationshipName>Goods_Issue_Items</relationshipName>
    <type>Lookup</type>
</CustomField>