force-app/main/default/objects/Unsealed_Item__c/fields/Unsealed__c.field-meta.xml
<CustomField>
    <fullName>Unsealed__c</fullName>
    <label>Unsealed</label>
    <referenceTo>Unsealed__c</referenceTo>
    <relationshipLabel>Unsealed Items</relationshipLabel>
    <relationshipName>Unsealed_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>