force-app/main/default/objects/Unsealed_Item__c/fields/Unsealed_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>Unsealed_Item_Id__c</fullName>
    <displayFormat>UI-{0000}</displayFormat>
    <externalId>true</externalId>
    <label>Unsealed Item Id</label>
    <type>AutoNumber</type>
</CustomField>